# jellyfin-exporter

./: .dockerignore  .env.example  .gitignore  .releaserc.cjs  Cargo.toml  Dockerfile  build.rs  changelog.md  code-of-conduct.md  contributing.md  deny.toml  docker-compose.example.yml  package-lock.json  package.json  readme.md  security.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
examples/grafana/: dashboard.json  readme.md
examples/prometheus/: scrape.yml
scripts/: bump-cargo-version.sh
src/: circuit_breaker.rs  client.rs  collector.rs  config.rs  lib.rs  main.rs  metrics.rs  retry.rs  server.rs
